Added getBookChapter into array of Reference objects

--- a/playground/index.html
+++ b/playground/index.html
@@ -8,6 +8,8 @@
 <body>
 <div id="searchboxdiv">
 <input id="searchbox" type="text" value="" size="80"><input type="button" id="searchbutton" value="Find">
+
+<a id="testlink" href="javascript:void(0);">Click me</a>
 </div>
 <div id="maintext">
 </div>
