--- a/playground/index.html
+++ b/playground/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="searchboxdiv">
-<input id="searchbox" type="text" value="" size="80"><input type="button" id="searchbutton" value="Find">
+<input id="searchbox" type="text" value="" size="80">
 
 <a id="testlink" href="javascript:void(0);">Click me</a>
 </div>
