--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>Playground 0.1</title>
-<script type="text/javascript" src="jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="index.js"></script>
+<title>InterBiblia.org Desktop</title>
+<link href="index.css" media="all" rel="stylesheet" type="text/css" />
 </head>
-<body>
-<div id="searchboxdiv">
-<input id="searchbox" type="text" value="" size="80">
+<body x-ng-app="interbiblia" x-ng-controller="appBodyController">
 
-<a id="testlink" href="javascript:void(0);">Click me</a>
+<div id="searchboxdiv">
+<input id="searchbox" type="text" value="" size="80" x-ng-model="inputSearchPhrase">
 </div>
-<div id="maintext">
+
+<a id="testlink" href="javascript:void(0);">Click me</a> | <a id="testlink" href="javascript:window.open(window.location);">New window?</a>
+
+<div id="mainbody">
+{{maintext.content}}
 </div>
+
+<div id="searchresults">
+{{searchresults.content}}
+</div>
+
+<script type="text/javascript" src="angular.min.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
-
